brat/test/golden/imports/use-illegal-z3.brat.golden
Error in test/golden/imports/use-illegal-z3.brat@FC {start = Pos {line = 4, col = 14}, end = Pos {line = 4, col = 15}}:
main = x, y, z
             ^

  z not found in (value) environment

